# autotranslator

./: .gitignore  README.md  pyproject.toml
autotranslator/: __init__.py  main.py
